--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -9,7 +9,7 @@ const subpath = pathname.match(/[^\/]+/g);
 const isActive = href === pathname || href === '/' + (subpath?.[0] || '');
 ---
 
-<a href={href} class:list={[className, { active: isActive }]} {...props}>
+<a href={href} class:list={['font-display', className, { active: isActive }]} {...props}>
 	<slot />
 </a>
 <style>
@@ -18,7 +18,6 @@ const isActive = href === pathname || href === '/' + (subpath?.[0] || '');
 		text-decoration: none;
 	}
 	a.active {
-		font-weight: bolder;
 		text-decoration: underline;
 	}
 </style>
