--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,49 +1,42 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+import BlogThumbnail from "../components/BlogThumbnail.astro";
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-		<Header />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to
-				<a href="https://docs.astro.build/">read the docs</a>
-				or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out
-				<a href="https://github.com/Charca/astro-blog-template">astro-blog-template</a>
-				by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
-		</main>
-		<Footer />
-	</body>
+  <head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+  </head>
+  <body class="bg-background">
+    <Header />
+    <main class="max-w-6xl mx-auto px-4 py-4">
+      <h1 class="font-bold mt-10 mb-8 font-display text-primary text-6xl md:text-9xl lg:text-[200px]">Wind Chaser Chronicles</h1>
+      <p>
+        Welcome to the Wind Chaser Chronicles, a series of spotlights on
+        destinations that combine kiteboarding and remote work. Each post
+        features a different destination, and includes tips on how to make the
+        most of your time there. Hopefully you'll find some inspiration to
+        chase the wind and work from somewhere new!
+      </p>
+    </main>
+    <section class="max-w-6xl mx-auto px-4">
+      <h2 class="text-3xl font-bold mt-8 mb-4 font-display">Latest spots</h2>
+      <p class="text-md text-gray-500 mb-4">Where we've been and what we've been up to.</p>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+        <BlogThumbnail title="Paracas, Peru" image="/spots/paracas/paracas-1.jpeg" date="Nov 2024" />
+        <BlogThumbnail title="Maui, Hawaii" image="/spots/maui/maui-1.jpeg" date="Oct 2024" />
+        <BlogThumbnail title="Prea, Brazil" image="/spots/prea/prea-2.jpeg" date="Nov 2023" />
+      </div>
+    </section>
+    <Footer />
+  </body>
 </html>
+<style>
+  h1 {
+    line-height: 0.8;
+  }
+</style>
