--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -1,4 +1,7 @@
 ---
+import { Image } from "astro:assets";
+import type { ImageMetadata } from "astro";
+
 interface Props {
   title: string;
   image: string;
@@ -6,14 +9,17 @@ interface Props {
 }
 
 const { title, image, date } = Astro.props;
+const images = import.meta.glob<{ default: ImageMetadata }>(
+  "/src/assets/**/*.{jpeg,jpg,png,gif}"
+);
+if (!images[image])
+  throw new Error(
+    `"${image}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`
+  );
 ---
 
 <div class="relative rounded-sm overflow-hidden">
-  <img
-    src={image}
-    alt={title}
-    class="w-full h-72 object-cover"
-  />
+  <Image src={images[image]()} alt={title} class="w-full h-72 object-cover" width={400}/>
   <div class="absolute bottom-0 left-0 right-0 p-6 text-white">
     <div class="flex items-center text-sm">
       <span>{date}</span>
