--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -25,7 +25,6 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
       .hero-image img {
         display: block;
         margin: 0 auto;
-        border-radius: 12px;
         box-shadow: var(--box-shadow);
       }
       .prose {
@@ -68,7 +67,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
         <div class="prose">
           <div class="title">
             <div class="date">
-              <FormattedDate date={pubDate} />
+              {pubDate ? <FormattedDate date={pubDate} /> : ''}
               {
                 updatedDate && (
                   <div class="last-updated-on">
