--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -6,13 +6,13 @@ import { SITE_TITLE } from '../consts';
 
 interface Props {
 	title: string;
-	description: string;
+	description?: string;
 	image?: string;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
+const { title, description = '', image = '/blog-placeholder-1.jpg' } = Astro.props;
 ---
 
 <!-- Global Metadata -->
