--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/BlogPost.astro";
 
 <Layout
   title="About me"
-  heroImage="/src/assets/about/me-1.jpeg"
+  heroImageOptimized="/src/assets/about/me-1.jpeg"
 >
   <p class="mb-4">
     What's up, my name is <strong>William</strong> and I'm a software engineer and
